Fix dark mode stacking rendering in Safari

--- a/source/components/c-year-divider/_c-year-divider.scss
+++ b/source/components/c-year-divider/_c-year-divider.scss
@@ -22,8 +22,6 @@
       // Modes
       @media (prefers-color-scheme: dark) {
           background-color: c(l-content, dark, background-content);
-          box-shadow:
-            0 -0.5rem 1rem 0 c(l-content, dark, background-content),
-            shadow(medium) c(l-content, dark, background-content);
+          box-shadow: none;
       }
 }
